--- a/web-app/static/index.html
+++ b/web-app/static/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Chatterdox</title>
+    <title>Chat with web pages</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -120,7 +120,7 @@
 
 <body>
     <div class="container">
-        <h1>Chatterdox</h1>
+        <h1>Chat with web pages</h1>
 
         <div class="input-container">
             <input type="text" id="dataInput" placeholder="Enter a URL and start chatting!">
